# Aperture

./: .gitignore  Cargo.toml  README.md  _config.yml  build.rs
.github/workflows/: release.yml
_includes/: head.html  header.html
src/: app.rs  export.rs  main.rs
src/state/: controller.rs  locker.rs  mod.rs  nexus.rs
src/sys/: handle.rs  mod.rs  network.rs  process.rs  service.rs
src/ui/: controller.rs  locker.rs  mod.rs  nexus.rs
