[package]
name = "Aperture"
version = "0.1.2"
edition = "2024"
description = "Diagnostic tui for Windows power users"
authors = ["stylebending"]
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_RestartManager",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
] }

[profile.release]
opt-level = 3
lto = true
strip = true
