[package]
name = "Aperture"
version = "0.2.0"
edition = "2024"
description = "Diagnostic tui for Windows power users"
authors = ["stylebending"]
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
dirs = "5.0"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_RestartManager",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics",
] }

[profile.release]
opt-level = 3
lto = true
strip = true

[build-dependencies]
image = "0.25.10"
winres = "0.1.12"
